--- a/.classpath
+++ b/.classpath
@@ -2,23 +2,33 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="libs/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="libs/google-api-client-1.22.0.jar"/>
 	<classpathentry kind="lib" path="libs/google-api-services-gmail-v1-rev48-1.22.0.jar"/>
+	<classpathentry kind="lib" path="libs/google-api-client-1.22.0.jar"/>
 	<classpathentry kind="lib" path="libs/google-http-client-1.22.0.jar"/>
-	<classpathentry kind="lib" path="libs/google-http-client-jackson2-1.22.0.jar"/>
 	<classpathentry kind="lib" path="libs/google-oauth-client-1.22.0.jar"/>
 	<classpathentry kind="lib" path="libs/google-oauth-client-java6-1.22.0.jar"/>
 	<classpathentry kind="lib" path="libs/google-oauth-client-jetty-1.22.0.jar"/>
-	<classpathentry kind="lib" path="libs/httpclient-4.0.1.jar"/>
-	<classpathentry kind="lib" path="libs/httpcore-4.0.1.jar"/>
-	<classpathentry kind="lib" path="libs/jackson-core-2.1.3.jar"/>
-	<classpathentry kind="lib" path="libs/jetty-6.1.26.jar"/>
-	<classpathentry kind="lib" path="libs/jetty-util-6.1.26.jar"/>
-	<classpathentry kind="lib" path="libs/jsr305-1.3.9.jar"/>
-	<classpathentry kind="lib" path="libs/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="libs/guava-jdk5-17.0.jar"/>
-	<classpathentry kind="lib" path="libs/servlet-api-2.5-20081211.jar"/>
 	<classpathentry kind="lib" path="libs/mail-1.4.7.jar"/>
+	<classpathentry kind="lib" path="libs/google-http-client-jackson2-1.22.0.jar"/>
+	<classpathentry kind="lib" path="libs/Clusion-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/aws-java-sdk.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/bcprov-jdk15on-152.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/fontbox-1.5.0.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/lucene-analyzers-common-5.0.0.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/lucene-analyzers-stempel-5.0.0.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/lucene-core-5.0.0.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/pdfbox-1.8.9.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/poi-3.11-20141221.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/poi-examples-3.11-20141221.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/poi-excelant-3.11-20141221.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/poi-ooxml-3.11-20141221.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/poi-ooxml-schemas-3.11-20141221.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/poi-scratchpad-3.11-20141221.jar"/>
+	<classpathentry kind="lib" path="clusion-libs/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="libs/guava-jdk5-17.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
