--- a/.classpath
+++ b/.classpath
@@ -30,5 +30,8 @@
 	<classpathentry kind="lib" path="clusion-libs/poi-scratchpad-3.11-20141221.jar"/>
 	<classpathentry kind="lib" path="clusion-libs/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="lib" path="libs/guava-jdk5-17.0.jar"/>
+	<classpathentry kind="lib" path="libs/jackson-core-2.1.3.jar"/>
+	<classpathentry kind="lib" path="libs/jetty-6.1.26.jar"/>
+	<classpathentry kind="lib" path="libs/jetty-util-6.1.26.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
