--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,6 @@
 	<classpathentry kind="lib" path="libs/jackson-core-2.1.3.jar"/>
 	<classpathentry kind="lib" path="libs/jetty-6.1.26.jar"/>
 	<classpathentry kind="lib" path="libs/jetty-util-6.1.26.jar"/>
+	<classpathentry kind="lib" path="libs/servlet-api-2.5-20081211.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
